Support multiple cities

--- a/README
+++ b/README
@@ -1,4 +1,7 @@
         Rowerynka
 
 Rowerynka jest botem w Facebookowym Messengerze. Mówisz jej, gdzie jesteś,
-a Rowerynka szuka najbliższego dostępnego roweru Veturilo. 
+a Rowerynka szuka najbliższego dostępnego roweru miejskiego.
+
+Rowerynka działa obecnie w Warszawie (Veturilo), Łodzi, Wrocławiu, Poznaniu,
+Szczecinie, Opolu, Grodzisku Mazowieckim i Michałowicach.
