--- a/README
+++ b/README
@@ -3,5 +3,4 @@
 Rowerynka jest botem w Facebookowym Messengerze. Mówisz jej, gdzie jesteś,
 a Rowerynka szuka najbliższego dostępnego roweru miejskiego.
 
-Rowerynka działa obecnie w Warszawie (Veturilo), Łodzi, Wrocławiu, Poznaniu,
-Szczecinie, Opolu, Grodzisku Mazowieckim i Michałowicach.
+Rowerynka działa obecnie w miastach obługiwanych przez firmę Nextbike.
